--- a/pom.xml
+++ b/pom.xml
@@ -115,10 +115,33 @@
                             <serverId>root-ev3</serverId>
                             <url>scp://root:password@10.0.1.1/</url>
                             <fromDir>${project.basedir}/target</fromDir>
-                            <includes>*.jar</includes>
+                            <includes>*-with-dependencies.jar</includes>
                             <excludes>*-sources.jar</excludes>
-                            <toDir>/home/lejos/programs</toDir>
+                            <toDir>/home/root/lejos/samples</toDir>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>de.dofe.ev3.Main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                        <phase>package</phase> <!-- bind to the packaging phase -->
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
